--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "choice tecnico",
     "main": "index.js",
     "scripts": {
-        "test": "test",
-        "dev": "nodemon ./bin/www",
-        "start": "node ./src/app.js",
+        "test": "NODE_ENV=test test",
+        "dev": "SET NODE_ENV=development & nodemon ./bin/www",
+        "start": "NODE_ENV=production node ./bin/www",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint:check": "eslint .",
@@ -15,13 +15,19 @@
     "author": "kerbin",
     "license": "ISC",
     "devDependencies": {
+        "chai": "^4.3.7",
         "eslint": "^8.39.0",
         "eslint-config-prettier": "^8.8.0",
+        "mocha": "^10.2.0",
         "nodemon": "^2.0.22",
         "prettier": "^2.8.8"
     },
     "dependencies": {
+        "config": "^3.3.9",
         "express": "^4.18.2",
-        "http-errors": "^2.0.0"
+        "http-errors": "^2.0.0",
+        "node-fetch": "^2.6.9",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^4.6.2"
     }
 }
