--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "config": "^3.3.9",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "http-errors": "^2.0.0",
         "node-fetch": "^2.6.9",
