--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "choice tecnico",
     "main": "index.js",
     "scripts": {
-        "test": "NODE_ENV=test test",
+        "test": "SET NODE_ENV=test && mocha",
         "dev": "SET NODE_ENV=development & nodemon ./bin/www",
         "start": "NODE_ENV=production node ./bin/www",
         "format:check": "prettier --check .",
@@ -23,10 +23,12 @@
         "prettier": "^2.8.8"
     },
     "dependencies": {
+        "chai-http": "^4.3.0",
         "config": "^3.3.9",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "http-errors": "^2.0.0",
+        "http-status-codes": "^2.2.0",
         "node-fetch": "^2.6.9",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^4.6.2"
